[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/guild_bar/server_card.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="header_style"]
bg_color = Color(0.16, 0.168, 0.185, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_left = 6
corner_radius_bottom_right = 6
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="ServerCard" type="VBoxContainer"]
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("1")

[node name="Header" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = SubResource("header_style")
theme_override_styles/hover = SubResource("header_style")
theme_override_styles/pressed = SubResource("header_style")
flat = false

[node name="HBox" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="Arrow" type="Label" parent="Header/HBox"]
layout_mode = 2
text = "â–¸"
theme_override_font_sizes/font_size = 14

[node name="NameLabel" type="Label" parent="Header/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14

[node name="VersionLabel" type="Label" parent="Header/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 11

[node name="SpacesContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 4
